intranett.theme/trunk/intranett/theme/skins/intranett_theme_styles/main.css
/* ... */
body > header > .contentAlignment {
	backhround-color: #fff;
	background-color:  rgba(255,255,255,.7);
	margin-top: 1px;
}

/* @group Personal tools */

#portal-personaltools-wrapper {
	background: #333;
	text-align: right;
	border-bottom: 1px solid #333;	
}
#portal-personaltools {
	width: 97.9167%; /* not 100% in order to align right edge with the columns, positioned with the grid */
	font-size: 0.762em;
}
#portal-personaltools li,
#portal-personaltools dt,
#portal-personaltools dd,
#portal-personaltools dd ul {
	list-style: none;
	display: inline;
}
#portal-personaltools dd ul {
	margin-left: 0;
}
#portal-personaltools dt a,
#portal-personaltools li a {
	/*float: left;*/
	padding: 0 0.762em;
	display: inline-block;
	line-height: 1.4em;
	margin: 0.3em 0;
}
#portal-personaltools dt a:link,
#portal-personaltools li a:link,
#portal-personaltools dt a:visited,
#portal-personaltools li a:visited {
	color: #e6e6e6;
}
#portal-personaltools dt a:hover,
#portal-personaltools li a:hover {
	color: #fff;
}
#portal-personaltools ul {
	white-space: nowrap;
}


/* @end */


/* @group Logo */

body > header h1 {
	float: left;
	font-weight: bold;
	line-height: 1em;
	letter-spacing:0;
	margin:0.62em 0 0.76em;
	position:relative;
	color: #3c3c3c;
}
a#portal-logo {
	display: block;
	text-shadow:0px 2px 0px #fff;
	color: #5E5E5E;
}
a#portal-logo:hover {
	color:#333;
}
a#portal-logo img {
	display: block;
}

/* @end */

/* @group Search box */

#search-box {
	float: right;
}
#searchGadget {
	width: 20em;
	font-size: 0.76em;
	padding: 0.38em 0.48em;	
	margin: 0;	
	border: none;
}
.inputLabelActive {
	color: #808080;
}
#searchbox-fields-wrapper {
    background:#ddd;
    border: 1px solid #ccc;
}
.searchSection {
	font-size: .762em;
	text-align: left;
	color: #808080;
}
button.searchButton {
	border: none;
	background: transparent;
	padding: 0.38em 0.76em;
	color: #666666;
	text-decoration: none;
	text-transform: uppercase;
	line-height: 1;
	position: relative;
	cursor: pointer;	
	margin: 0;
	text-shadow: 0 1px 0 rgba(247,247,247,0.9);
}
button.searchButton:hover {
	color: #000;
}
#livesearch-advanced-search,
#livesearch-all-items {
	font-size: 0.85em;
	margin-top: 1.25em;
    font-family: Helvetica, Arial, sans-serif;	
    border-top: 1px solid #555;
}
#livesearch-all-items {
    margin-top: 0;
}

/* @end */

/* @group Global navigation */

body > header nav {
	clear: left;
	width: 97.9167%; /* not 100% in order to align right edge with the columns, positioned with the grid */
	position: relative;
	z-index:1;
	bottom: 0;
	display: table;
}
body > header nav ul {
	/*margin: 1.69em 0 0;*/
	margin: 0;
	padding: 0;
	display: table-row;
	list-style: none;
	background-color: #555;
	width: 100%;
}
body > header nav li {
	display: table-cell;
	list-style: none;
	padding: 0;
	margin: 0;
	height: 2.4em;
}
body > header nav li a {
	display: block;
	height: 100%;
    margin: 0;
	padding: .62em 1.25em;    
    color: #fff !important;
    text-decoration: none;
	text-transform: uppercase;
    font-size: 0.9em;   
    border-left: 1px solid #888;
}
body > header nav li:first-child a {
	border-left: none;
}
body > header nav li a:hover {
	background-color: #000;
}
body > header nav li.selected a {
	background: #000;
	text-shadow: none;		
	position: relative;
}
body > header nav li a .toolTipArrow {
	bottom: -1px;	
	left: 0.62em;
}

/* @end */



/* @end */

/* @group Breadcrumbs */

#portal-breadcrumbs {
	margin: -2.6em 0 0;
}
.breadCrumb {
	display:block;
	float:left;
	height:21px;
	margin:0 auto;
	overflow:hidden;
	padding:1.24em 0;
	width:960px;
}
.breadCrumb ul {
	display:block;
	height:21px;
	margin:0;
	padding:0;
}
.breadCrumb ul li {
	background:url("chevron.gif") 100% 0 no-repeat;
	display:block;
	float:left;
	font-size:0.9167em;
	height:21px;
	line-height:21px;
	margin:0 6px 0 0;
	overflow:hidden;
	padding:0 10px 0 0;
	position:relative;
}
.breadCrumb ul li div.chevronOverlay {
	position:absolute;
	right:0;
	top:0;
	z-index:2;
}
.breadCrumb ul li span {
	display:block;
	overflow:hidden;
}
.breadCrumb ul li a {
	display:block;
	float:left;
	height:21px;
	line-height:21px;
	overflow:hidden;
	position:relative;
}
.breadCrumb ul li.first a {
	background:url("icon_home.gif") 0 0 no-repeat;
	height:16px !important;
	margin-top:2px;
	overflow:hidden;
	padding:0;
	text-indent:-1000em;
	width:16px;
}
.breadCrumb ul li.first a:hover {
	background-position:0 -16px;
}
.breadCrumb ul li.last {
	background:none;
	margin-right:0;
	padding-right:0;
}
.chevronOverlay {
	background:url("chevron_overlay.png") 100% 0 no-repeat;
	display:none;
	height:20px;
	width:13px;
}

/* @end */

/* @group Columns */

#portal-columns {
	padding: 2.6em 0;
    background: #fff;
    border-top: 1px solid #E6E6E6;
    border-bottom: 1px solid #E6E6E6;    
}
#portal-column-content {
	clear: both;
}
/*#portal-column-content,
#portal-column-one,
#portal-column-two {
	padding: 3.3em 0;
}*/
#portal-columns > aside {
	border-radius: none;
	background: transparent;
}
.managePortletsFallback {
	margin: 1.25em 0;
	display: inline-block;
}

/* @group Content */

#content-core {
	margin-bottom: 1.25em;
}
.documentFirstHeading {
	margin: 0 0 0.38em;
	padding: 0;
	/*clear: right;*/
	/*text-transform: uppercase;*/
}
.documentDescription {
	margin: .76em 0 0;
	padding: 0 0 1.4em;
    /*line-height: 1.25em;*/	
    color: #000;
    border-bottom: 1px solid #ccc;
}
#portal-columns article footer small {
	display: block;
}
.newsImageContainer a {
	
}
.newsImageContainer p.discreet {
	margin: 0;
}
dl.collapsible {
	border:  none !important;
}
dl.collapsible dt.collapsibleHeader {
	margin: 0;
	padding:  0 6px 0 22px;
	top: 0;
	margin-top: 0 !important;
}
dl.collapsedBlockCollapsible dt.collapsibleHeader {
	line-height: 1.2em;
}
dl.collapsible dd.collapsibleContent {
	padding: 0 1em 0 0;
	margin-left: 22px !important;
}

/* @group Listings */

/* @group Folder Listing */

/*body.template-folder_listing #content-core dt {
	margin-top: 1.25em;
}*/
/* ... */

